--- a/index.html
+++ b/index.html
@@ -154,16 +154,16 @@
                 </div>
                 <div class="intro-img">
                     <div class="intro-img1">
-                            <img src="./img/about-author.png" alt="img">
-                            <h1>Mamun Abdullah</h1>
-                            <h5>Managing Director</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae voluptatem vero sed
-                                praesentium pariatur qui excepturi eveniet itaque possimus dicta.</p>
-                        </div>
+                        <img src="./img/about-author.png" alt="img">
+                        <h1>Mamun Abdullah</h1>
+                        <h5>Managing Director</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae voluptatem vero sed
+                            praesentium pariatur qui excepturi eveniet itaque possimus dicta.</p>
+                    </div>
                     <div class="intro-img2">
-                            <img src="./img/about-author2.png" alt="img">
-                            <h1>Mamun Abdullah</h1>
-                            <h5>Managing Director</h1>
+                        <img src="./img/about-author2.png" alt="img">
+                        <h1>Mamun Abdullah</h1>
+                        <h5>Managing Director</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae voluptatem vero sed
                                 praesentium pariatur qui excepturi eveniet itaque possimus dicta.</p>
                     </div>
@@ -172,6 +172,45 @@
         </div>
     </section>
     <!-- intro section end -->
+    <!-- footer section start -->
+    <footer class="footer">
+        <div class="containar">
+            <div class="footer-section">
+                <div class="footer-desc">
+                    <img src="./img/header-logo.png" alt="img">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia provident modi neque vero
+                        ducimus eos est soluta ipsam animi ipsa.</p>
+                        <!-- <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-tiktok"></i> -->
+                </div>
+                <div class="footer-tag">
+                    <h3>Tag Cloud</h3>
+                 <ul>
+                    <li><i class="fa-solid fa-angles-right"></i>Health</li>
+                    <li><i class="fa-solid fa-angles-right"></i>Medical</li>
+                    <li><i class="fa-solid fa-angles-right"></i>Travel</li>
+                    <li><i class="fa-solid fa-angles-right"></i>JQuery</li>
+                    <li><i class="fa-solid fa-angles-right"></i> Design</li>
+                    <li><i class="fa-solid fa-angles-right"></i>Css </li>
+                 </ul>
+                </div>
+                <div class="footer-page">
+               <h3>Pages</h3>
+               <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li> Instructors</li>
+                <li>Blog</li>
+                <li>Author</li>
+                <li>Contact</li>
+               </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer section end -->
 </body>
 
 </html>
