--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
-
 <body>
+    <!-- navbar section start -->
+    <nav class="nav">
+        <div class="containar">
+            <div class="nav-section">
+                <ul class=" nav-li">
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Courses</li>
+                    <li>Lessons</li>
+                    <li>Pages</li>
+                    <li>Blog</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- navbar section end -->
     <!-- header section start -->
     <header class="header">
         <div class="containar">
